Kubernetes/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-webserver

spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: python-webserver
  template:
    metadata:
      labels:
        app.kubernetes.io/name: python-webserver
    spec:
      containers:
        - image: docker.io/library/python-webserver:latest
          name: python-webserver
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
