Kubernetes/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-webserver-service
spec:
  selector:
    app.kubernetes.io/name: python-webserver
  ports:
    - name: python-webserver-port
      protocol: TCP
      port: 80
      targetPort: 8080
